syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/itsscb/df/pb";

message BlockSessionRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Block Session";
          description: "Block a Session";
          required: [
            "session_id"
          ];
        };
        example: "{\"session_id\": \"5e1d67da-7c9b-4365-a4d5-3cc0a051241e\"}"
    };
    string session_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        format: "uuid",
        example: "\"5e1d67da-7c9b-4365-a4d5-3cc0a051241e\""
      }];
}

message BlockSessionResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Blocked Session";
        };
        example: "{\"session_id\": \"5e1d67da-7c9b-4365-a4d5-3cc0a051241e\", \"blocked\": true}"
    };
    string session_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        format: "uuid",
        example: "\"5e1d67da-7c9b-4365-a4d5-3cc0a051241e\""
      }];
    bool blocked = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        example: "true"
    }];
}